fix: fix align item center

--- a/app/infor.module.css
+++ b/app/infor.module.css
@@ -1,8 +1,7 @@
 .inner {
   display: flex;
   justify-content: space-between;
-  padding-top: calc(var(--mantine-spacing-xl) * 4);
-  padding-bottom: calc(var(--mantine-spacing-xl) * 4);
+  align-items: center;
 }
 
 .content {
